--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <title>Roboflow Inference Demo</title>
   <!-- External Libraries -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css" rel="stylesheet" integrity="sha512-/..." crossorigin="anonymous" />
@@ -36,7 +38,7 @@
 				</div>
 			</div>
 		</div>
-
+      
 		<div class="content">
 			<div class="content__grid">
 				<div class="col-12-s6-m4" id="method">
@@ -50,7 +52,7 @@
 				<div class="col-12-m8" id="fileSelectionContainer">
 					<label class="input__label" for="file">Select File</label>
 					<div class="flex">
-						<input class="input input--left flex-1" type="text" id="fileName" disabled />
+						<input class="input input--left flex-1" type="text" id="fileName" disabled />							
 						<button id="fileMock" class="bttn right active">Browse</button>
 					</div>
 					<input style="display: none;" type="file" id="file" />
@@ -62,13 +64,53 @@
 						<input type="text" id="url" placeholder="https://path.to/your.jpg" class="input"/><br>
 					</div>
 				</div>
+        
+				<div class="col-12-m6">
+					<label class="input__label" for="classes">Filter Classes</label>
+					<input type="text" id="classes" placeholder="Enter class names" class="input"/><br>
+					<span class="text--small">Separate names with commas</span>
+				</div>
+
+				<div class="col-6-m3 relative">
+					<label class="input__label" for="confidence">Min Confidence</label>
+					<div>
+						<i class="fas fa-crown"></i>
+						<span class="icon">%</span>
+						<input type="number" id="confidence" value="50" max="100" accuracy="2" min="0" class="input input__icon"/></div>
+					</div>
+				<div class="col-6-m3 relative">
+					<label class="input__label" for="overlap">Max Overlap</label>
+					<div>
+						<i class="fas fa-object-ungroup"></i>
+						<span class="icon">%</span>
+						<input type="number" id="overlap" value="50" max="100" accuracy="2" min="0" class="input input__icon"/></div>
+				</div>
 				<div class="col-6-m3" id="format">
 					<label class="input__label">Inference Result</label>
 					<div>
-						<button id="jsonButton" data-value="json" class="bttn right fill active">JSON</button>
+						<button id="imageButton" data-value="image" class="bttn left fill active">Image</button>
+						<button id="jsonButton" data-value="json" class="bttn right fill">JSON</button>
 					</div>
 				</div>
-							<div class="col-12">
+				<div class="col-12 content__grid" id="imageOptions">
+					<div class="col-12-s6-m4" id="labels">
+						<label class="input__label">Labels</label>
+						<div>
+							<button class="bttn left active">Off</button>
+							<button data-value="on" class="bttn right">On</button>
+						</div>
+					</div>
+					<div class="col-12-s6-m4" id="stroke">
+						<label class="input__label">Stroke Width</label>
+						<div>
+							<button data-value="1" class="bttn left active">1px</button>
+							<button data-value="2" class="bttn">2px</button>
+							<button data-value="5" class="bttn">5px</button>
+							<button data-value="10" class="bttn right">10px</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-12">
 					<button type="submit" value="Run Inference" class="bttn__primary">Run Inference</button>
 				</div>
 			</div>
